--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -12,8 +12,9 @@
     "bonder": "npm run build && node bin/hop-node bonder",
     "arb-bot": "npm run build && node bin/hop-node arb-bot",
     "start": "node .",
-    "dev": "tsc --watch",
-    "build": "tsc",
+    "typecheck": "tsc",
+    "dev": "tsc -p tsconfig.build.json --watch",
+    "build": "tsc -p tsconfig.build.json",
     "lint": "eslint --fix \"src/**/*\" \"test/**/*\"",
     "clean": "rm -rf dist",
     "clean:arbitrum": "rm -rf l2_nodes/arbitrum/data",
