--- a/packages/hop-node/tsconfig.json
+++ b/packages/hop-node/tsconfig.json
@@ -13,7 +13,7 @@
     "moduleResolution": "node",
     "skipLibCheck": true,
     "sourceMap": false,
-    "outDir": "dist",
+    "noEmit": true,
     "baseUrl": "src",
     "paths": {
       "*": ["node_modules/*", "src/types/*"],
