--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -45,11 +45,11 @@
     "web3-utils": "1.3.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_GIT_SHA=`git rev-parse --short HEAD` react-scripts start",
     "dev": "BROWSER=none npm start",
     "clean": "rimraf build",
     "lint": "npx eslint --fix \"**/*.{ts,tsx}\"",
-    "build": "INLINE_RUNTIME_CHUNK=false react-scripts --max_old_space_size=4096 build",
+    "build": "REACT_APP_GIT_SHA=`git rev-parse --short HEAD` INLINE_RUNTIME_CHUNK=false react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "netlify deploy --prod",
