--- a/packages/hop-node/.eslintrc.json
+++ b/packages/hop-node/.eslintrc.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/no-misused-promises": 0,
     "@typescript-eslint/no-dynamic-delete": 0,
     "@typescript-eslint/return-await": 0,
-    "@typescript-eslint/consistent-type-definitions": 0
+    "@typescript-eslint/consistent-type-definitions": 0,
+    "@typescript-eslint/method-signature-style": 0
   }
 }
