--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -31,6 +31,7 @@
     "react-feather": "2.0.9",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-use": "^17.3.1",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
     "to-hex": "0.0.15",
