--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,6 +17,7 @@
     "classnames": "2.2.6",
     "clsx": "1.1.1",
     "copy-to-clipboard": "^3.3.1",
+    "dayjs": "^1.10.7",
     "deepmerge": "^4.2.2",
     "dotenv": "8.2.0",
     "ethers": "^5.5.1",
