--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -40,8 +40,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.33.0",
-    "@eth-optimism/contracts-latest": "npm:@eth-optimism/contracts@^0.5.2",
-    "@eth-optimism/contracts": "0.4.14",
+    "@eth-optimism/contracts": "^0.5.3",
     "@eth-optimism/core-utils": "^0.5.2",
     "@eth-optimism/message-relayer": "^0.1.11",
     "@eth-optimism/watcher": "0.0.1-alpha.9",
