--- a/packages/stats-worker/package.json
+++ b/packages/stats-worker/package.json
@@ -21,10 +21,15 @@
     "@hop-protocol/core": "0.0.1-beta.51",
     "@hop-protocol/sdk": "0.0.1-beta.243",
     "@pinata/sdk": "^1.1.23",
+    "@types/luxon": "^2.0.7",
     "@types/node": "^16.7.10",
+    "@types/uuid": "^8.3.3",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.6",
+    "luxon": "^2.1.1",
+    "sqlite3": "^5.0.2",
     "typescript": "^4.4.2",
+    "uuid": "^8.3.2",
     "wait": "^0.4.2"
   },
   "devDependencies": {
