--- a/packages/frontend/netlify.toml
+++ b/packages/frontend/netlify.toml
@@ -18,3 +18,10 @@
   command = "yarn build"
   publish = "build/"
 
+[[redirects]]
+  from = "/*"
+  to = "/451.html"
+  status = 451
+  force = true
+  conditions = {Country=["BY","MM","BI","CF","CD","CU","IR","LB","LY","RU","CI","SO","SS","LR","KP","SD","SY","VE","YE","ZW"]}
+  headers = {Link = "<https://app.hop.exchange>"}
